[gd_scene load_steps=6 format=3 uid="uid://bbuo24wyxqqay"]

[ext_resource type="Texture2D" uid="uid://dmwh22s5lp4bn" path="res://Sprites/player_ship.png" id="1_uvvdc"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerState.gd" id="3_khl6i"]
[ext_resource type="AudioStream" uid="uid://cbyb75imslw3t" path="res://Sounds/Hit_Hurt.wav" id="4_0gb6e"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerControl.gd" id="4_rcthe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s84js"]
size = Vector2(22, 25)

[node name="Player" type="Node2D" groups=["player"]]
position = Vector2(160, 450)
script = ExtResource("3_khl6i")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_uvvdc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_s84js")

[node name="PlayerControl" type="Node" parent="."]
script = ExtResource("4_rcthe")

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0gb6e")
volume_db = -4.0

[connection signal="area_entered" from="Area2D" to="PlayerControl" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="PlayerControl" method="_on_area_2d_area_exited"]
